@@ -17,7 +17,6 @@ import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -26,7 +25,7 @@ public class BoardService {
     private final UserRepository userRepository;
     private final PostRepository postRepository;
     private final AttachmentRepository attachmentRepository;
-    private final S3Service s3Service;
+    private final S3Service s3Service; // S3Service는 이미 구현되어 있다고 가정합니다.
 
     @Transactional
     public PostResponse createPost(PostRequest request, String email) {
@@ -43,14 +42,14 @@ public class BoardService {
 
         if (request.getAttachments() != null) {
             for (MultipartFile file : request.getAttachments()) {
-                String fileUrl = s3Service.uploadFile(file); // 파일 S3 업로드
+                String fileUrl = s3Service.uploadFile(file);
                 Attachment attachment = Attachment.builder()
                         .fileName(file.getOriginalFilename())
                         .fileUrl(fileUrl)
                         .post(savedPost)
                         .build();
                 attachmentRepository.save(attachment);
-                savedPost.getAttachments().add(attachment);
+                savedPost.getAttachments().add(attachment); // 양방향 매핑 처리
             }
         }
         return PostResponse.from(savedPost);
@@ -58,19 +57,33 @@ public class BoardService {
 
     @Transactional(readOnly = true)
     public PostResponse getPost(Long id) {
-        // [수정] Fetch Join 메서드 사용
         Post post = postRepository.findByIdWithAuthorAndAttachments(id)
                 .orElseThrow(() -> new IllegalArgumentException("해당 게시글이 존재하지 않습니다."));
         return PostResponse.from(post);
     }
 
+    /**
+     * 제목 또는 내용으로 게시글을 검색합니다.
+     * 검색어가 없거나 비어있으면 모든 게시글을 반환합니다.
+     * @param search 검색 키워드
+     * @return 검색 결과 (PostResponse 리스트)
+     */
     @Transactional(readOnly = true)
-    public List<PostResponse> getAllPosts() {
-        // [수정] Fetch Join 메서드 사용
-        List<Post> posts = postRepository.findAllWithAuthorAndAttachments();
+    public List<PostResponse> searchPosts(String search) {
+        List<Post> posts;
+
+        if (search == null || search.trim().isEmpty()) {
+            // 🌟 수정: 새로운 Fetch Join 메서드 사용
+            posts = postRepository.findAllWithAuthorAndAttachments();
+        } else {
+            // 🌟 수정: 새로운 Fetch Join 검색 메서드 사용
+            posts = postRepository.searchByTitleOrContentWithAuthorAndAttachments(search.trim());
+        }
+
+        // 이 시점에 이미 Attachment와 User 정보가 로드되어 있어 Lazy Loading 오류가 발생하지 않습니다.
         return posts.stream()
                 .map(PostResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
@@ -78,25 +91,24 @@ public class BoardService {
         Post post = postRepository.findById(postId)
                 .orElseThrow(() -> new IllegalArgumentException("해당 게시글이 존재하지 않습니다."));
 
-        // 권한 확인
         if (!post.getAuthor().getEmail().equals(email)) {
             throw new ResponseStatusException(HttpStatus.FORBIDDEN, "게시글을 수정할 권한이 없습니다.");
         }
 
         post.update(request.getTitle(), request.getContent());
 
-        // 1. 삭제 요청된 파일 처리
+        // 기존 첨부파일 삭제
         if (request.getDeletedAttachmentUrls() != null) {
             List<Attachment> attachmentsToDelete = post.getAttachments().stream()
                     .filter(att -> request.getDeletedAttachmentUrls().contains(att.getFileUrl()))
                     .toList();
             for (Attachment attachment : attachmentsToDelete) {
-                s3Service.deleteFile(attachment.getFileUrl()); // S3에서 삭제
-                post.removeAttachment(attachment); // Post에서 연관관계 제거 (orphanRemoval=true로 DB에서 삭제됨)
+                s3Service.deleteFile(attachment.getFileUrl());
+                post.removeAttachment(attachment); // Post 엔티티에서 제거 (CascadeType.ALL로 삭제)
             }
         }
 
-        // 2. 새로 추가된 파일 처리
+        // 새 첨부파일 추가
         if (request.getNewAttachments() != null) {
             for (MultipartFile file : request.getNewAttachments()) {
                 String fileUrl = s3Service.uploadFile(file);
@@ -105,11 +117,10 @@ public class BoardService {
                         .fileUrl(fileUrl)
                         .post(post)
                         .build();
-                post.addAttachment(attachment); // 연관관계 편의 메서드 사용
+                post.addAttachment(attachment);
             }
         }
 
-        // Post 엔티티는 dirty checking에 의해 자동 업데이트 됨
         return PostResponse.from(post);
     }
 
@@ -118,30 +129,15 @@ public class BoardService {
         Post post = postRepository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("해당 게시글이 존재하지 않습니다."));
 
-        // 권한 확인
         if (!post.getAuthor().getEmail().equals(email)) {
             throw new ResponseStatusException(HttpStatus.FORBIDDEN, "게시글을 삭제할 권한이 없습니다.");
         }
 
-        // S3 파일 먼저 삭제
+        // S3 파일 삭제
         for (Attachment attachment : post.getAttachments()) {
             s3Service.deleteFile(attachment.getFileUrl());
         }
+
         postRepository.delete(post);
-    }
-
-    @Transactional(readOnly = true)
-    public List<PostResponse> searchPosts(String keyword) {
-        if (keyword == null || keyword.trim().isEmpty()) {
-            return getAllPosts();
-        }
-
-        // [수정] 키워드 소문자 변환 및 와일드카드(%) 처리
-        String searchKeyword = "%" + keyword.trim().toLowerCase() + "%";
-
-        List<Post> posts = postRepository.findByKeywordWithAuthorAndAttachments(searchKeyword);
-        return posts.stream()
-                .map(PostResponse::from)
-                .collect(Collectors.toList());
     }
 }
